Adapted the new parallel runway system with a new xml format and both importXML and exportXML now support it